<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE6D6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <ImageButton
        android:id="@+id/return_b"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/geoservices_button" />
    
    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Settings_b"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_above="@+id/checkin_b"
        android:layout_alignLeft="@+id/share_b"
        android:clickable="true"
        android:text="@string/title_section3"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/checkin_b"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/Settings_b"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:text="@string/title_section5"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/share_b"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_above="@+id/Settings_b"
        android:layout_alignLeft="@+id/return_b"
        android:clickable="true"
        android:text="@string/title_section4"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/classes_b2"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_above="@+id/event_b2"
        android:layout_alignLeft="@+id/event_b2"
        android:clickable="true"
        android:text="@string/title_section2"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/event_b2"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_above="@+id/share_b"
        android:layout_alignLeft="@+id/share_b"
        android:clickable="true"
        android:text="@string/title_section1"
        android:textSize="@dimen/small_text" />

</RelativeLayout>
